# youtube-summarizer

./: .env.example  .env_example  .gitignore  .gitmodules  README.md  TEST_README.md  app.py  example_results.py  frontend.html  log_config.py  mcp_server.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  railway.toml  requirements-test.txt  requirements.txt  run_tests.py  scrap_P_fHJIYENdI_complete.json  start.sh  test.ipynb  test.md  test.py  test_api.py  test_app.py  update_deps.py
actor/: AGENTS.md  README.md  requirements.txt
actor/.actor/: actor.json  dataset_schema.json  input_schema.json  output_schema.json
actor/src/: main.py
backup/summarizers/: prompts_react.py  schemas_react.py  summarizer_lite_react.py
routes/: AGENTS.md  __init__.py  errors.py  health.py  helpers.py  schema.py  scrap.py  scrape.py  summarize.py  validation.py
scripts/: AGENTS.md  deploy_cloud_run.sh
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_api.py  test_streaming.py  test_summarizer.py
youtube-summarizer-ui/: next.config.mjs  package.json  railway.toml
youtube-summarizer-ui/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
youtube-summarizer-ui/app/api/chat/: route.ts
youtube-summarizer-ui/app/api/summarize/: route.ts
youtube-summarizer-ui/app/api/transcribe/: route.ts
youtube-summarizer-ui/app/api/video-info/: route.ts
youtube-summarizer-ui/components/: chat-panel.tsx  summary-panel.tsx  transcription-panel.tsx  video-analyzer.tsx  video-info.tsx  video-url-input.tsx
youtube-summarizer-ui/types/: video.ts
youtube_summarizer/: AGENTS.md  __init__.py  fast_copy.py  openrouter.py  prompts.py  schemas.py  scrapper.py  settings.py  summarizer.py  summarizer_gemini.py  summarizer_lite.py  summarizer_openrouter.py  supadata.py  transcriber.py  transcript_provider.py  utils.py  youtube_loader._yt_dlppy  youtube_loader.py  youtube_scrapper.py
youtube_summarizer/llm_harness/: AGENTS.md  __init__.py  openrouter.py
youtube_summarizer/scrapper/: AGENTS.md  __init__.py  scrape_creators.py  scrapper.py  supadata.py
youtube_summarizer/transcriber/: __init__.py  transcriber.py
