[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Backend API for YouTube video transcription and AI summarization"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "aiohttp>=3.12.15",
    "deepagents>=0.2.4",
    "fal-client>=0.7.0",
    "fastapi>=0.116.1",
    "google-genai>=1.32.0",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-google-genai>=3.0.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "opencc>=1.1.9",
    "pydantic>=2.12.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "yt-dlp>=2025.10.22",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "rich>=14.1.0",
    "ruff>=0.8.0",
    "ipykernel>=6.30.1",
    "pytest-cov>=6.2.1",
]

[project.scripts]
youtube-summarizer = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_summarizer"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
